--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:image" content="https://raw.githubusercontent.com/KellyaneeGustavo/convite/main/img/funfo.jpg" />
+    <meta property="og:image" content="https://github.com/KellyaneeGustavo/convite/blob/main/img/fundo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -151,6 +151,8 @@
                         Local chalés Ventura
                     </p>
                     <a href="https://www.google.com/maps?q=-5.9662000,-49.9215000&entry=gps&lucs=,94215790,47071704,47069508,94218641,94203019,47084304,94208458,94208447&g_ep=CAISDTYuMTE1LjEuNjAwMTAYACCenQoqSCw5NDIxNTc5MCw0NzA3MTcwNCw0NzA2OTUwOCw5NDIxODY0MSw5NDIwMzAxOSw0NzA4NDMwNCw5NDIwODQ1OCw5NDIwODQ0N0ICQlI%3D&g_st=iw" target="_blank" class="btn">Ver o trajeto</a>
+            
+                    <a href="https://noivos.casar.com/kellyane-e-gustavo" target="_blank" class="btn confirmar">Confirmar Presença</a>
                 </div>
             </div>
         </div>
