--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </p>
                     <a href="https://www.google.com/maps?q=-5.9662000,-49.9215000&entry=gps&lucs=,94215790,47071704,47069508,94218641,94203019,47084304,94208458,94208447&g_ep=CAISDTYuMTE1LjEuNjAwMTAYACCenQoqSCw5NDIxNTc5MCw0NzA3MTcwNCw0NzA2OTUwOCw5NDIxODY0MSw5NDIwMzAxOSw0NzA4NDMwNCw5NDIwODQ1OCw5NDIwODQ0N0ICQlI%3D&g_st=iw" target="_blank" class="btn">Ver o trajeto</a>
             
-                    <a href="https://noivos.casar.com/kellyane-e-gustavo" target="_blank" class="btn confirmar">Confirmar Presença</a>
+                    <a href="https://noivos.casar.com/kellyane-e-gustavo#/rsvp" target="_blank" class="btn confirmar">Confirmar Presença</a>
                 </div>
             </div>
         </div>
