--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                     <p class="band-texto dia">Horário
                     </p>
                     <p class="band-texto informacoes">
-                        Cerimônia - 16h<br>
-                        Festa - 19h
+                        Cerimônia - 16h
                     </p>
                     <p class="band-texto dia">Local
                     </p>
