--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <p class="band-texto dia">Horário
                     </p>
                     <p class="band-texto informacoes">
-                        Cerimônia - 16h
+                        Cerimônia - 16h<br>
                     </p>
                     <p class="band-texto dia">Local
                     </p>
@@ -220,7 +220,7 @@
                 <li class="dia">Música</li>
                 <li><img src="img/musica.svg"></li>
                 <li class="font-1-400-m">Gostaria de sugerir uma música pra festa?</li>
-                <button class="modal-button btn" onclick="openModal('modal1')">Sugerir música</button>
+                <a href="https://noivos.casar.com/kellyane-e-gustavo#/recados" target="_blank" class="btn">Sugerir Música</a>
             </ul>
         </div>
         <div class="cards" data-aos="flip-left">
